--- a/TracingExampleApp/TracingExampleApp.csproj
+++ b/TracingExampleApp/TracingExampleApp.csproj
@@ -8,9 +8,10 @@
 
 
   <ItemGroup>
-    <PackageReference Include="OpenTelemetry.Exporter.Jaeger" Version="0.2.0-alpha.179" />
-    <PackageReference Include="OpenTelemetry.Collector.AspNetCore" Version="0.2.0-alpha.179" />
-    <PackageReference Include="OpenTelemetry.Hosting" Version="0.2.0-alpha.179" />
-    <PackageReference Include="OpenTelemetry.Collector.Dependencies" Version="0.2.0-alpha.179" />
+    <PackageReference Include="OpenTelemetry.Exporter.Jaeger" Version="0.2.0-alpha.227" />
+    <PackageReference Include="OpenTelemetry.Collector.AspNetCore" Version="0.2.0-alpha.227" />
+    <PackageReference Include="OpenTelemetry.Hosting" Version="0.2.0-alpha.227" />
+    <PackageReference Include="OpenTelemetry.Collector.Dependencies" Version="0.2.0-alpha.227" />
+    <PackageReference Include="ApacheThrift" Version="0.13.0.1" />
   </ItemGroup>
 </Project>
